# libratom

./: .bandit  .codeclimate.yml  .codecov.yml  .gitignore  .pylintrc  .travis.yml  AUTHORS  CONTRIBUTING.md  ChangeLog  LICENSE  README.md  ci_setup_pypff.sh  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  tox.ini  update_dependencies.sh
.github/: stale.yml
.github/workflows/: cache_mbox_data.yml  cache_pst_data.yml  cache_test_data.yml  publish.yml  test_suite.yml
examples/: NER.ipynb  README.md  entities.ipynb  entities_joblib.ipynb  entities_multiprocessing.ipynb  named_entity_recognition.ipynb  ner_parallel.ipynb  pst_walk.ipynb  requirements.in  requirements.txt  spacy_test.ipynb
libratom/: __init__.py  entities.py
libratom/cli/: __init__.py  cli.py  subcommands.py  utils.py
libratom/data/: __init__.py  eml_dump_input.schema.json  media_types.json  perm-headers.csv
libratom/lib/: __init__.py  base.py  concurrency.py  constants.py  core.py  database.py  download.py  eml.py  entities.py  exceptions.py  headers.py  mbox.py  pff.py  report.py  utils.py
libratom/models/: __init__.py  attachment.py  configuration.py  entity.py  file_report.py  header_field.py  message.py
libratom/scripts/: download_edrm_zipped_files.py  download_sample_mbox_files.py  export_eml_files.py  get_media_type_list.py
libratom/utils/: concurrency.py  database.py  entities.py  entity_extraction.py  pff.py
tests/: conftest.py  test_cli.py  test_libratom.py
tests/load/: test_pst.py
tests/unit/: test_cli.py  test_libratom.py  test_scripts.py
