[metadata]
name = libratom
summary = Python library and supporting utilities to parse and process PST and mbox email sources
description-file = README.md
description-content-type = text/markdown
url = https://github.com/libratom/libratom
author = RATOM
author-email = ratom@protonmail.com
license = MIT
requires-python = >=3.6
classifier =
    Development Status :: 5 - Production/Stable

[files]
packages = libratom
data_files =
    libratom/data = libratom/data/*

[entry_points]
console_scripts =
    ratom = libratom.cli.cli:ratom
