[metadata]
name = libratom
summary = Python library and supporting utilities to parse and process PST and mbox email sources
description_file = README.md
description_content_type = text/markdown
url = https://github.com/libratom/libratom
author = RATOM
author_email = ratom@protonmail.com
license = MIT
requires_python = >=3.9
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console

[files]
packages = libratom
data_files =
    libratom/data = libratom/data/*

[entry_points]
console_scripts =
    ratom = libratom.cli.cli:ratom
